@@ -4,6 +4,7 @@ if (!exists(".devtesting")) {
     require(ggplot2)      # the 2 ggplot tests take so long they get in the way
     require(plyr)
     require(reshape)
+    require(nlme)
 }
 options(warn=2)
 nfail = ntest = lastnum = 0
@@ -1513,6 +1514,18 @@ test(523, set(DT,2L,c("a","a"),list(9L,10L)), data.table(a=INT(1,10,3),b=INT(4,7
 setkey(DT,b)
 test(524, set(DT,2L,"a",2L), data.table(a=1:3, b=INT(4,7,8), key="b")) 
 test(525, set(DT,1L,"b",6L), data.table(a=1:3, b=6:8))
+
+# Test that data.frame incompability is fixed, came to light in Feb 2012
+DT = data.table(name=c('a','b','c'), value=1:3)
+test(526, base::droplevels(DT[ name != 'a' ]), data.table(name=c('b','c'),value=2:3))   # base:: because we'll implement a fast droplevels, too.
+
+if ("package:nlme" %in% search()) {
+    test(527, {x=Orthodont;tt=lme(distance ~ age, data=x); tt[["data"]]=NULL; tt},
+              {x=as.data.table(Orthodont);tt=lme(distance ~ age, data=x);tt[["data"]]=NULL;tt})
+    test(528, {x=iris;tt=groupedData( Sepal.Length ~ Sepal.Width | Species, data=x);attr(tt,"class")=NULL;attr(tt,"FUN")=NULL;tt},
+              {x=as.data.table(iris);tt=groupedData( Sepal.Length ~ Sepal.Width | Species, data=x);attr(tt,"class")=NULL;attr(tt,"FUN")=NULL;attr(tt,".internal.selfref")=NULL;tt})
+}
+
 
 ## See test-* for more tests
 
